# stl-viewer

./: CMakeLists.txt  LICENSE  README.md  fshader.glsl  vshader.glsl
src/: CMakeLists.txt  geometry_engine.cpp  geometry_engine.h  main.cpp  stl_viewer.cpp  stl_widget.cpp  stl_widget.h
